# simple_json_server

./: .codecov.yml  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DOCUMENTATION_EXAMPLE.md  LICENSE.txt  README.md  deny.toml  generate_cert.sh  lcov.info
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
actor_attribute_macro/: Cargo.toml  README.md
actor_attribute_macro/src/: lib.rs
docs/: ci-setup.md
examples/: calculator.rs  doc_test.rs  server.rs  tls_server.rs
examples/demo/: Cargo.toml  README.md  client.js  index.html  package-lock.json  package.json
examples/demo/src/: main.rs
scripts/: ci-local.sh  publish-crates.sh
simple_json_server/: Cargo.toml  lcov.info
simple_json_server/examples/: calculator.rs  doc_test.rs  server.rs  tls_server.rs
simple_json_server/src/: lib.rs  test_actor.rs  tls.rs
simple_json_server/tests/: integration_test.rs
src/: lib.rs  test_actor.rs
