[package]
name = "actor_attribute_macro"
version = "1.0.2"
edition = "2024"
license = "MIT"
description = "A procedural macro for generating JSON-based actor implementations for the simple_json_server library."
docs.rs = "https://docs.rs/actor_attribute_macro"
repository = "https://github.com/dcsturman/simple_json_server"
keywords = ["server", "json", "rpc", "macro", "websockets"]
categories = ["api-bindings", "concurrency"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
