[package]
name = "simple_json_server"
version = "1.0.0"
edition = "2024"
license-file = "../LICENSE"
description = "A simple way to build a JSON-based server with automatic JSON serialization/deserialization, error handling, async support, type safety, and comprehensive RustDoc generation."
repository = "https://github.com/dcsturman/simple_json_server"
readme = "../README.md"
keywords = ["server", "json", "rpc", "actor", "macro", "websockets"]
categories = ["api-bindings", "concurrency"]

[dependencies]
actor_attribute_macro = { path = "../actor_attribute_macro", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "io-util", "fs"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "doc_test"
path = "examples/doc_test.rs"

[[example]]
name = "tls_server"
path = "examples/tls_server.rs"