[package]
name = "simple_json_server_demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A demo project for the simple_json_server library"
repository = "https://github.com/dcsturman/simple_json_server"
readme = "README.md"
keywords = ["server", "json", "rpc", "actor", "macro", "websockets", "demo", "example"]
categories = ["api-bindings", "concurrency"]

[dependencies]
actor_attribute_macro = { path = "../../actor_attribute_macro" }
simple_json_server = { path = "../../simple_json_server" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
